--- a/css/style.css
+++ b/css/style.css
@@ -4,73 +4,7 @@
     font-weight: normal;
     font-style: normal;
 }
-/*position of icons*/
-@media screen and (max-width:460px){
-    .icon-pos{
-        margin-top: -200px;
-        margin-left: -30px;
-    }
-}
-@media screen and (max-width:960px){
-    .icon-pos{
-        margin-top: -200px;
-        margin-left: -30px;
-    }
-}
 /*End icon-position*/
-/*Search*/
-.search-form .form-group {
-    float: right !important;
-    transition: all 0.35s, border-radius 0s;
-    width: 32px;
-    height: 32px;
-    background-color: #fff;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-    border-radius: 25px;
-    border: 1px solid #ccc;
-    margin: -10px 0 0 0;
-}
-.search-form .form-group input.form-control {
-    padding-right: 20px;
-    border: 0 none;
-    background: transparent;
-    box-shadow: none;
-    display:block;
-}
-.search-form .form-group input.form-control::-webkit-input-placeholder {
-    display: none;
-}
-.search-form .form-group input.form-control:-moz-placeholder {
-    /* Firefox 18- */
-    display: none;
-}
-.search-form .form-group input.form-control::-moz-placeholder {
-    /* Firefox 19+ */
-    display: none;
-}
-.search-form .form-group input.form-control:-ms-input-placeholder {
-    display: none;
-}
-.search-form .form-group:hover,
-.search-form .form-group.hover {
-    width: 100%;
-    border-radius: 4px 25px 25px 4px;
-}
-.search-form .form-group i {
-    position: absolute;
-    top: -1px;
-    right: -2px;
-    z-index: 2;
-    display: block;
-    width: 34px;
-    height: 34px;
-    line-height: 34px;
-    text-align: center;
-    color: #bdbec0;
-    left: initial;
-    font-size: 14px;
-}
-/*End Search*/
 /*Custom Classes*/
 .no-pad{
     padding: 0;
@@ -84,6 +18,9 @@
 }
 .bg-gray{
     background-color: #bdbec0;
+}
+.btn-rad{
+    border-radius: 15px;
 }
 .f-7{
     font-size: 7px;
@@ -134,7 +71,7 @@
     font-family: Proxima Nova;
     color: #252525;
 }
-a.f-18:hover,i.fa.fa-user:hover{
+a.f-18:hover,i.fa.fa-user:hover,a.dropdown-toggle.bg-black:hover{
     background-color: #252525 !important;
     color: #2b87ad;
 }
