--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     font-weight: normal;
     font-style: normal;
 }
-/*End icon-position*/
 /*Custom Classes*/
 .no-pad{
     padding: 0;
@@ -18,6 +17,9 @@
 }
 .bg-gray{
     background-color: #bdbec0;
+}
+.bg-gray2{
+    background-color: #e7e8e9;
 }
 .btn-rad{
     border-radius: 15px;
@@ -64,9 +66,14 @@
     font-family: Proxima Nova;
     color: #3a3a3c;
 }
-
 .f-36{
     font-size: 36px;
+    font-weight: bold;
+    font-family: Proxima Nova;
+    color: #3a3a3c;
+}
+.f-40{
+    font-size: 40px;
     font-weight: bold;
     font-family: Proxima Nova;
     color: #252525;
@@ -83,6 +90,83 @@ ul.dropdown-menu.show{
     color: #fff;
 }
 /*End Custom Classes*/
+/*Carousel*/
+#thumbnail-preview-indicators {
+    position: relative;
+    overflow: hidden;
+}
+#thumbnail-preview-indicators .slides .slide-1, 
+#thumbnail-preview-indicators .slides .slide-2,
+#thumbnail-preview-indicators .slides .slide-3 {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+#thumbnail-preview-indicators,
+#thumbnail-preview-indicators .slides,
+#thumbnail-preview-indicators .slides .slide-1, 
+#thumbnail-preview-indicators .slides .slide-2,
+#thumbnail-preview-indicators .slides .slide-3 {
+    height: 280px;
+    border-radius: 25px;
+
+}
+#thumbnail-preview-indicators .slides .slide-1 {
+    background-image: url(../img/job11.jpg); 
+}
+#thumbnail-preview-indicators .slides .slide-2 {
+    background-image: url(../img/job13.jpg);
+}
+#thumbnail-preview-indicators .slides .slide-3 {
+    background-image: url(../img/job14.jpg);
+}
+#thumbnail-preview-indicators .carousel-inner .item .carousel-caption {
+    top: 20%;
+    bottom: inherit;
+}
+#thumbnail-preview-indicators .carousel-indicators li,
+#thumbnail-preview-indicators .carousel-indicators li.active {
+    position: relative;
+    width: 20px;
+    height: 8px;  
+    top: 30px;
+}
+#thumbnail-preview-indicators .carousel-indicators li > .thumbnail {
+    position: absolute;
+    top: 0;
+    width: 80px;
+    display: none;
+    opacity: 0;
+    left: 50%;
+    margin-top: -80px;
+    margin-left: -50px;
+}
+#thumbnail-preview-indicators .carousel-indicators li:hover > .thumbnail,
+#thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail {
+    display: block;
+    opacity: .8;
+}
+#thumbnail-preview-indicators .carousel-indicators li.active > .thumbnail:hover{
+    opacity: 1;
+}
+@media screen and (max-width : 480px) {    
+    #thumbnail-preview-indicators .carousel-indicators li,
+    #thumbnail-preview-indicators .carousel-indicators li.active {
+        width: 50px;
+        height: 8px;
+        position: relative;
+    }
+    #thumbnail-preview-indicators .carousel-indicators li > .thumbnail {
+        width: 50px;
+        left: 50%;
+        margin-top: -50px;
+        margin-left: -25px;
+    }
+}
+.chevron-pos{
+    line-height: 270px;;
+}
+/*End Carousel*/
 .product_thumbnail {
 
 	width:64px;
