--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 .no-pad{
     padding: 0;
 }
+
 .bg-black{
     background-color: #252525;
     color: #fff;
@@ -48,6 +49,11 @@
     font-family: Proxima Nova;
     color: #3a3a3c;
 }
+.f-17{
+    font-size: 17px;
+    font-weight: Semibold;
+    font-family: Segoe UI;  
+}
 .f-18{
     font-size: 18px;
     font-weight: Semibold;
@@ -72,18 +78,19 @@
     font-family: Proxima Nova;
     color: #3a3a3c;
 }
-.f-40{
-    font-size: 40px;
+.f-45{
+    font-size: 45px;
     font-weight: bold;
     font-family: Proxima Nova;
     color: #252525;
 }
-.lh-100{
-    line-height: 100px;
-}
 .lh-75{
     line-height: 75px;
 }
+.lh-100{
+    line-height: 100px;
+}
+
 a.f-18:hover,i.fa.fa-user:hover,a.dropdown-toggle.bg-black:hover,ul.dropdown-menu:hover{
     background-color: #252525 !important;
     color: #2b87ad !important;
@@ -177,13 +184,22 @@ ul.dropdown-menu.show{
 /*Ribbon Boxes*/
 .product-box {
     position: relative;
-    background: #EEE;
+    background: #fff;
     width: 200px;
     height: 200px;
     border-bottom: 50px solid #bdbec0;
     padding: 25px;
     margin: 25px;
     border-radius: 25px;
+}
+.product-box-lg {
+    position: relative;
+    background: #fff;
+    width: 300px;
+    height: 300px;
+    margin: 25px;
+    border-radius: 25px;
+    box-shadow: 10px 10px 5px #888888;
 }
 .ribbon-top {
     position: absolute;
@@ -337,12 +353,37 @@ ul.dropdown-menu.show{
     animation-direction: normal, alternate;
 }
 /*End Bob hover*/
+/*Add to Cart*/
+.btn-add-cart{
+    border:0px solid #393B3E;-webkit-box-shadow: #737373 0px 1px 5px ;-moz-box-shadow: #737373 0px 1px 5px ; box-shadow: #737373 0px 1px 5px ; -webkit-border-radius: 25px; -moz-border-radius: 25px;border-radius: 25px;font-size:14px;font-family:arial, helvetica, sans-serif; padding: 10px 20px 10px 20px; text-decoration:none; display:inline-block;text-shadow: 0px 1px 0 rgba(10,10,10,0.5);font-weight:bold; color: #8C8C8C;
+    background-color: #38B6FF; background-image: -webkit-gradient(linear, left top, left bottom, from(#38B6FF), to(#181540));
+    background-image: -webkit-linear-gradient(left, #38B6FF, #181540);
+    background-image: -moz-linear-gradient(left, #38B6FF, #181540);
+    background-image: -ms-linear-gradient(left, #38B6FF, #181540);
+    background-image: -o-linear-gradient(left, #38B6FF, #181540);
+    background-image: linear-gradient(to right, #38B6FF, #181540);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#38B6FF, endColorstr=#181540);
+    color: #fff;
+}
+.btn-add-cart:hover{
+    border:0px solid #393B3E;
+    background-color: #05a3ff; background-image: -webkit-gradient(linear, left top, left bottom, from(#05a3ff), to(#0a081a));
+    background-image: -webkit-linear-gradient(right, #05a3ff, #0a081a);
+    background-image: -moz-linear-gradient(left, #05a3ff, #0a081a);
+    background-image: -ms-linear-gradient(left, #05a3ff, #0a081a);
+    background-image: -o-linear-gradient(left, #05a3ff, #0a081a);
+    background-image: linear-gradient(to right, #05a3ff, #0a081a);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#05a3ff, endColorstr=#0a081a);
+    color: #000;
+}
+/*End Add to Cart*/
 .product_thumbnail {
 	width: 80%;
 }
 
 .product_thumbnail_lg {
-	width:128px;
+	position: relative;
+    width:128px;
+    top: 50px;
+    left: 80px;
 }
 .link-overlay {
     display: inline-block;
