--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,27 @@
 .btn-rad{
     border-radius: 15px;
 }
+.label-price{
+    color: #000;
+    font-family: Proxima Nova;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 100px;
+}
+.price{
+    color: blue;
+    font-family: Proxima Nova;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 100px;
+}
+.total-price{
+    color: blue;
+    font-family: Proxima Nova;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 50px;
+}
 .f-7{
     font-size: 7px;
     font-weight: bold;
@@ -83,6 +104,9 @@
     font-weight: bold;
     font-family: Proxima Nova;
     color: #252525;
+}
+.lh-15{
+    line-height: 15px;
 }
 .lh-75{
     line-height: 75px;
@@ -192,6 +216,14 @@ ul.dropdown-menu.show{
     margin: 25px;
     border-radius: 25px;
 }
+.product-box-sm{
+    position: relative;
+    background: #fff;
+    width: 100px;
+    height: 100px;
+    border-radius: 25px; 
+
+}
 .product-box-lg {
     position: relative;
     background: #fff;
@@ -200,6 +232,19 @@ ul.dropdown-menu.show{
     margin: 25px;
     border-radius: 25px;
     box-shadow: 10px 10px 5px #888888;
+}
+.checkout-box{
+    position: relative;
+    background-color: #bdbec0;   
+    min-width: 500px;
+    height: 150px;
+    padding: 25px;
+}
+.checkout-box-total{
+    position: relative;
+    background-color: #bdbec0;   
+    min-width: 500px;
+    height: 50px;
 }
 .ribbon-top {
     position: absolute;
@@ -354,8 +399,8 @@ ul.dropdown-menu.show{
 }
 /*End Bob hover*/
 /*Add to Cart*/
-.btn-add-cart{
-    border:0px solid #393B3E;-webkit-box-shadow: #737373 0px 1px 5px ;-moz-box-shadow: #737373 0px 1px 5px ; box-shadow: #737373 0px 1px 5px ; -webkit-border-radius: 25px; -moz-border-radius: 25px;border-radius: 25px;font-size:14px;font-family:arial, helvetica, sans-serif; padding: 10px 20px 10px 20px; text-decoration:none; display:inline-block;text-shadow: 0px 1px 0 rgba(10,10,10,0.5);font-weight:bold; color: #8C8C8C;
+.btn-landslide{
+    border:0px solid #393B3E;-webkit-box-shadow: #737373 0px 1px 5px ;-moz-box-shadow: #737373 0px 1px 5px ; box-shadow: #737373 0px 1px 5px ; -webkit-border-radius: 25px; -moz-border-radius: 25px;border-radius: 20px;font-size:14px;font-family:arial, helvetica, sans-serif; padding: 10px 20px 10px 20px; text-decoration:none; display:inline-block;text-shadow: 0px 1px 0 rgba(10,10,10,0.5);font-weight:bold; color: #8C8C8C;
     background-color: #38B6FF; background-image: -webkit-gradient(linear, left top, left bottom, from(#38B6FF), to(#181540));
     background-image: -webkit-linear-gradient(left, #38B6FF, #181540);
     background-image: -moz-linear-gradient(left, #38B6FF, #181540);
@@ -364,7 +409,7 @@ ul.dropdown-menu.show{
     background-image: linear-gradient(to right, #38B6FF, #181540);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#38B6FF, endColorstr=#181540);
     color: #fff;
 }
-.btn-add-cart:hover{
+.btn-landslide:hover{
     border:0px solid #393B3E;
     background-color: #05a3ff; background-image: -webkit-gradient(linear, left top, left bottom, from(#05a3ff), to(#0a081a));
     background-image: -webkit-linear-gradient(right, #05a3ff, #0a081a);
@@ -373,6 +418,16 @@ ul.dropdown-menu.show{
     background-image: -o-linear-gradient(left, #05a3ff, #0a081a);
     background-image: linear-gradient(to right, #05a3ff, #0a081a);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#05a3ff, endColorstr=#0a081a);
     color: #000;
+}
+.btn-close{
+    background-color: #bdbec0;
+    position: relative;
+    top: -135px;
+    left: 105px;
+}
+.btn-close:hover{
+    background-color: #bdbec0;
+    color: red;
 }
 /*End Add to Cart*/
 .product_thumbnail {
