--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,12 @@
     font-family: Proxima Nova;
     color: #3a3a3c;
 }
+.f-27{
+    font-size: 27px;
+    font-weight: bold;
+    font-family: Proxima Nova;
+    color: #252525;
+}
 .f-36{
     font-size: 36px;
     font-weight: bold;
@@ -440,6 +446,7 @@ ul.dropdown-menu.show{
     color: red;
 }
 /*End Add to Cart*/
+
 .product_thumbnail {
 	width: 80%;
 }
@@ -469,4 +476,12 @@ ul.dropdown-menu.show{
 }
 .popover-cart {
     min-width:100px !important;
+}
+
+/* Start Dev Dashboard */
+.dashboard-product-box{
+    position: relative;
+    background: #bdbec0;
+    padding: 10px;
+    margin: 10px;
 }
