--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,7 @@ ul.dropdown-menu.show{
     color: #000;
 }
 .popover-cart {
+    min-width:100px;
     min-width:100px !important;
 }
 
@@ -488,6 +489,6 @@ ul.dropdown-menu.show{
 .dashboard-product-box{
     position: relative;
     background: #bdbec0;
-    padding: 10px;
-    margin: 10px;
+    padding: 15px;
+    margin: 15px;
 }
