--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,14 @@ body{
     background-color: #BBBDC0;
     min-height: 600px;
 }
+.bg-tab-letters{
+    background-color: #BBBDC0;
+    height: 100px;
+}
+.bg-search{
+    background-color: #606060;
+    color: #fff;
+}
 .btn-rad{
     border-radius: 15px;
 }
@@ -549,6 +557,15 @@ a.btn.btn-lg.active{
     border-top-right-radius: 17px;
     padding: 5px;
 }
+a.btn{
+    color: #58585B;
+    font-family: Proxima Nova;
+    font-weight: normal;
+    border-right: solid 1px;
+}
+a.btn:hover{
+    color: #2a88ad;
+}
 .product_thumbnail {
 	width: 80%;
 }
@@ -568,6 +585,24 @@ a.btn.btn-lg.active{
     top:0;
     left:0;
 
+}
+input.form-control{
+    border-radius: 25px;
+    max-height: 28px;
+}
+button.btn.bg-search.btn-rad{
+    max-height: 28px;
+}
+button.btn.bg-gray.btn-rad{
+    max-height: 28px;
+}
+i.fa.fa-search{
+    position: relative;
+    top: -4px;
+}
+form.navbar-form{
+    position: relative;
+    top: 4px;
 }
 .popover {min-width:400px;}
 .popover-title{
