--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body{
 }
 .bg-tab-letters{
     background-color: #BBBDC0;
-    height: 100px;
+    height: 200px;
 }
 .bg-tab-top-earners{
     background-color: #BBBDC0;
@@ -61,7 +61,7 @@ body{
 }
 .bg-tab-alphabetical{
     background-color: #BBBDC0;
-    height: 580px;
+    height: 300px;
 }
 .bg-search{
     background-color: #606060;
@@ -305,6 +305,13 @@ ul.dropdown-menu.show{
     padding: 25px;
 }
 .admin-box{
+    position: relative;
+    background-color: #D1D2D4;
+    border-radius: 20px;
+    height: 150px;
+    padding: 25px 0px 25px 0px; 
+}
+.admin-usr-box{
     position: relative;
     background-color: #D1D2D4;
     border-radius: 20px;
@@ -685,7 +692,7 @@ form.navbar-form{
 {
     margin-left: 22px;
     float: left;
-    height: 440px;
+    height: 300px;
     width: 1340px;
     overflow-y: scroll;
     margin-bottom: 25px;
