--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,9 @@ body{
     font-family: Proxima Nova;
     color: #252525;
 }
+.lh-8{
+    line-height: 8px;
+}
 .lh-15{
     line-height: 15px;
 }
@@ -421,6 +424,16 @@ body{
     border-top: 3px solid #79A70A;
 }
 /*End Ribbon Boxes*/
+/* Card */
+.card {
+    background: #f5f5f5;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    padding: 20px;
+    box-shadow: 3px 3px 3px #999;
+}
+/*End Card*/
 /* Bob Hover */
 @-webkit-keyframes hvr-bob {
     0% {
@@ -562,6 +575,23 @@ body{
     text-decoration: none;
 }
 /*End Button for approve in admin*/
+/*Button for casual*/
+.btn-landslide-casual {
+    background: #999999!important;
+    -webkit-border-radius: 28!important;;
+    -moz-border-radius: 28!important;;
+    border-radius: 28px!important;;
+    font-family: Proxima Nova!important;;
+    color: #ffffff!important;;
+    padding: 1px 16px 1px 16px!important;;
+    text-decoration: none!important;;
+}
+
+.btn-landslide-casual:hover {
+    background: #3cb0fd!important;;
+    text-decoration: none!important;;
+}
+/*End Button for casual*/
 .btn-close{
     background-color: #bdbec0;
     position: relative;
